--- a/index.html
+++ b/index.html
@@ -124,41 +124,49 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Technical Skills</p>
-                    <span>C/C++</span> <span class="pull-right">85%</span>
+                    <span>C/C++</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python</span> <span class="pull-right">85%</span>
+                    <span>Python</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Java</span> <span class="pull-right">50%</span>
+                    <span>Java</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>ARM Assembly</span> <span class="pull-right">60%</span>
+                    <span>ARM Assembly</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Verilog</span> <span class="pull-right">75%</span>
+                    <span>Verilog</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>MATLAB</span> <span class="pull-right">70%</span>
+                    <span>MATLAB</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>F#</span> <span class="pull-right">60%</span>
+                    <span>F#</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>SQL</span> <span class="pull-right">60%</span>
+                    <span>SQL</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>HTML/CSS</span> <span class="pull-right">70%</span>
+                    <span>HTML/CSS</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Adobe Photoshop/Illustrator</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Microsoft Office Suite</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
