--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">SwypeKey (Virtual In-Air Keyboard</h2>
+                      <h2 class="w-title">SwypeKey (Virtual In-Air Keyboard)</h2>
                       <div class="w-more">
                         <span class="w-ctegory">FPGA Design</span> / <span class="w-date">May 2018</span>
                       </div>
