--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a third year Electronic and Information Engineering student at Imperial College London. I
+                      I am a final year MEng Electronic and Information Engineering student at Imperial College London. I
                       was born in India, and lived in Tokyo for all of my life and grew up there, before moving
                       to London for university. I was always interested in maths and sciences and after participating
                       in the Conrad Spirit of Innovation Challenge in high school and going through the whole engineering
@@ -250,13 +250,15 @@
               <div class="timeline-header">
                 <h3>Google</h3>
                 <h6>Tokyo, Japan</h6>
-                <p>April 2020 - Present</p>
+                <p>April 2020 - August 2020</p>
               </div>
 
               <div class="timeline-content">
                 <h4>Software Engineer Intern</h4>
-                <p>Working on the Chrome Browser team, specifically on Service Workers and mitigating a prominent Out of Memory crash
-                  when there are too many service worker registrations.
+                <p>Worked on the Chrome Browser team, specifically on Service Workers and mitigating one of the top Out of Memory 
+                  crashers in the Service Worker codebase when there are too many service worker registrations. Implemented both
+                  back end and front end parts of project, and was able to succesfully reduce almost all of the crashes through 
+                  my contributions. (Continued to contribute to Chromium as an external contributor after internship ended.)
                 </p>
               </div>
 
@@ -640,7 +642,7 @@
                 <span class="ico-circle"><i class="ion-checkmark-circled"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">31</p>
+                <p class="counter">35</p>
                 <span class="counter-text">UNIVERSITY MODULES TAKEN</span>
               </div>
             </div>
