--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <h4>Software Engineer Intern</h4>
                 <p>Worked on the Chrome Browser team, specifically on Service Workers and mitigating one of the top Out of Memory 
                   crashers in the Service Worker codebase when there are too many service worker registrations. Implemented both
-                  back end and front end parts of project, and was able to succesfully reduce almost all of the crashes through 
+                  back end and front end parts of project, and was able to successfully reduce almost all of the crashes through 
                   my contributions. (Continued to contribute to Chromium as an external contributor after internship ended.)
                 </p>
               </div>
