--- a/index.html
+++ b/index.html
@@ -250,6 +250,29 @@
               <div class="timeline-header">
                 <h3>Google</h3>
                 <h6>Tokyo, Japan</h6>
+                <p>October 2020 - December 2020</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>Software Engineer Intern</h4>
+                <p>Worked on the Chrome Browser team again, specifically on implementing and adding support for a new Networking API 
+                  called Readable Byte Streams in the Blink Renderer Process in Chrome, which was shipped in M89. Contributed to the 
+                  API spec and added new web-platform tests for untested cases. Benchmarking tests showed up to 9x better 
+                  performance to read byte chunks compared to the default streams implementation.
+                </p>
+              </div>
+
+            </div> <!-- /timeline-block -->
+
+            <div class="timeline-block">
+
+              <div class="timeline-ico">
+                <i class="fa fa-briefcase"></i>
+              </div>
+
+              <div class="timeline-header">
+                <h3>Google</h3>
+                <h6>Tokyo, Japan</h6>
                 <p>April 2020 - August 2020</p>
               </div>
 
@@ -642,7 +665,7 @@
                 <span class="ico-circle"><i class="ion-checkmark-circled"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">35</p>
+                <p class="counter">38</p>
                 <span class="counter-text">UNIVERSITY MODULES TAKEN</span>
               </div>
             </div>
