Update Chromium Gerrit link

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                   important people in the company.
                 </p>
                 <p style="text-align: center; margin-left: 20px; margin-right: 20px;">
-                  <b>See more about contributions at: <a href="https://chromium-review.googlesource.com/q/owner:+nidhijaju">Chromium CLs</a></b>
+                  <b>See more about contributions at: <a href="https://chromium-review.googlesource.com/q/owner:nidhi+jaju">Chromium CLs</a></b>
                 </p>
               </div>
               <a href="#chrome-inline-content" class="venobox" data-gall="portfolioGallery" data-vbtype="inline">
